compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__documentation__block_comments_in_documentation_are_escaped.snap
---
source: compiler-core/src/nix/tests/documentation.rs
expression: "\n/// /* hello */\npub fn documented() { 1 }"
---
----- SOURCE CODE

/// /* hello */
pub fn documented() { 1 }

----- COMPILED NIX
let
  /**
     /* hello * /
  */
  documented = { }: 1;
in
{ inherit documented; }
