compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__documentation__function_with_multiline_documentation.snap
---
source: compiler-core/src/nix/tests/documentation.rs
expression: "\n/// Function doc!\n/// Hello!!\n///\npub fn documented() { 1 }"
---
----- SOURCE CODE

/// Function doc!
/// Hello!!
///
pub fn documented() { 1 }

----- COMPILED NIX
let
  /**
    Function doc!
    Hello!!
    
  */
  documented = { }: 1;
in
{ inherit documented; }
